--- a/app/views/wall/wallCreationModal.html
+++ b/app/views/wall/wallCreationModal.html
@@ -65,7 +65,7 @@
                                                 <label for="hashtagInput">What's your main hashtag for the event? This will show prominently on your tweet wall.</label>
                                                 <div class="input-group">
                                                     <span class="input-group-addon">#</span>
-                                                    <input ng-blur="lostMainhashtagFocus()" ng-model="newWallOptions.mainHashtagText" type="text" class="form-control" id="hashtagInput" placeholder="loklak">
+                                                    <input required ng-model="newWallOptions.mainHashtagText" type="text" class="form-control" name="hashtagInput" placeholder="loklak">
                                                 </div>
                                             </div>
                                             <div class="form-group">
