--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -42,6 +42,26 @@
 	background-color: white !important;
 }
 
+.btn-loklak-blue {
+	color: #fff;
+	background-color: $btn-loklak-blue;
+	border-color: #00acd6;
+}
+
+.btn-loklak-blue:focus {
+	color: #fff;
+	background-color: $btn-loklak-blue-hover;
+	border-color: #269abc;
+	outline: none;
+}
+
+.btn-loklak-blue:hover {
+	color: #fff;
+	background-color: $btn-loklak-blue-hover;
+	border-color: #269abc;
+	text-decoration: none;
+}
+
 
 /* Old styles */
 
