--- a/app/views/data-connect/data-connect-modal.html
+++ b/app/views/data-connect/data-connect-modal.html
@@ -58,7 +58,7 @@
 									<div class="add-map-rule" ng-click="addMapRule()">
 										<i class="fa fa-plus"></i> Add rule
 									</div>
-									<button type="submit" class="btn btn-primary">Confirm</button>
+									<button type="submit" class="btn btn-loklak-blue">Confirm</button>
 									<button ng-click="toggleAddForm()" type="button" class="btn btn-default">Cancel</button>
 								</form>
 							</div>
