--- a/app/views/wall/wallCreationModal.html
+++ b/app/views/wall/wallCreationModal.html
@@ -84,7 +84,7 @@
                                             </div>
                                             <!-- /.box-body -->
                                             <div class="box-footer">
-                                                <a ng-click="proceed()" type="submit" class="btn btn-primary">Next Step: Content</a>
+                                                <a ng-click="proceed()" type="submit" class="btn btn-loklak-blue">Next Step: Content</a>
                                             </div>
                                         </form>
                                     </div>
@@ -183,7 +183,7 @@
                                             </div> -->
                                         </div>
                                         <div class="box-footer">
-                                            <a ng-click="proceed()" type="submit" class="btn btn-primary">Next Step: Design</a>
+                                            <a ng-click="proceed()" type="submit" class="btn btn-loklak-blue">Next Step: Design</a>
                                         </div>
                                     </div>
                                 </div>
@@ -253,7 +253,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="box-footer">
-                                                            <a ng-click="start()" ng-disabled="!(newWallOptions.eventName || newWallOptions.mainHashtagText)" type="submit" class="btn btn-primary">Start twitter wall!</a>
+                                                            <a ng-click="start()" ng-disabled="!(newWallOptions.eventName || newWallOptions.mainHashtagText)" type="submit" class="btn btn-loklak-blue">Start twitter wall!</a>
                                                             <p ng-if="step1.$invalid" style="margin-top: 10px; color: red;">Enter an event Name and your event's main #hashtag</p>
                                                         </div>
                                                     </div>
