#330 Added "Block Retweets" functionality client-side
https://github.com/loklak/loklak_webclient/issues/330#issuecomment-127200645

--- a/app/views/wall/wallCreationModal.html
+++ b/app/views/wall/wallCreationModal.html
@@ -150,15 +150,15 @@
                                                         <toggle-switch class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.profanity">
                                                         </toggle-switch>
                                                     </div>
-                                                    <h4>Coming Soon</h4>
                                                     <hr>
-                                                    <div class="form-group row wall-exclude-toggles">
+                                                    <div class="form-group row">
                                                         <h4 class="col-xs-9">Block retweets
                                                             <br><small>Retweets will not be shown or counted in the stats, they'll be immediately blocked.</small></h4>
-                                                        <toggle-switch disabled="true" class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.blockRetweets">
+                                                        <toggle-switch class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.blockRetweets">
                                                         </toggle-switch>
                                                     </div>
                                                     <hr>
+                                                    <h4>Coming Soon</h4>
                                                     <div class="form-group row wall-exclude-toggles">
                                                         <h4 class="col-xs-9">Hide retweets
                                                             <br><small>Retweets will not be shown, but they WILL be counted in the stats and leaderboards.</small></h4>
