Setting up google charts [experimentation]

--- a/app/views/analyze/analyze.html
+++ b/app/views/analyze/analyze.html
@@ -88,7 +88,7 @@
 </div>
 </div>
 
-    
+    <div google-chart chart="chartObject" style="{{cssStyle}}"></div>
     <div class="modal-dialog modal-lg wall-modal-dialog">
         <div class="modal-content wall-modal-content">
             <div class="modal-header">
