--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -21,3 +21,6 @@ $search-grey-border: #E1E8ED;
 $search-grey-bg: #F5F8FA;
 $search-light-black: #292f33;
 $search-twitter-blue: #55ACEE;
+
+$btn-loklak-blue: #55acee;
+$btn-loklak-blue-hover: #0084B4;
