--- a/app/styles/_topnav.scss
+++ b/app/styles/_topnav.scss
@@ -9,7 +9,6 @@
 		> .topnav {
 			background: white;
 			height: 46px;
-			overflow: hidden;
 		}
 	}
 	.universal-topnav-container {
@@ -59,6 +58,9 @@
 				}
 				span.fa {
 					margin-right: 5px;
+					@media (min-width: 768px) and (max-width: 991px) {
+					   	margin-right:1px;
+					}
 					font-size: 20px;
 					position: relative;
 					top: 3px;
