--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -1,3 +1,7 @@
+.content-wrapper.home-view-content-wrapper {
+	background-color: white !important;
+	background: white !important;
+}
 
 /* Left user info  */
 .left-result-container {
@@ -113,7 +117,7 @@
 }
 .main-result-container {
 	.statuses-container {
-		background-color: white;
+		
 		padding: 0;
 		.item {
 			padding: 15px 10px;
@@ -143,4 +147,90 @@
 	@media (min-width: 992px) {
 		padding-right: 0;
 	}
+}
+
+/* Anonymous content */
+.blue-bar {
+	width: 100%;
+	height: 50px;
+	background-color: $search-twitter-blue;
+}
+.anonymous-content-container
+ {
+ 	text-align: center;
+	.wassup-title {
+		margin: 65px 0 0 0;
+		text-align: center;
+		font-size: 43px;
+	}
+	> div {
+		text-align: center;
+	}
+	.search-form-wrapper {
+		position: relative;
+		width: 99%;
+		display: inline-block;
+		max-width: 650px;
+		> span {
+			position: absolute;
+			top: 17px;
+			right: 0;
+			display: inline-block;
+			font-size: 16px;
+		    font-weight: 600;
+		    color: white;
+		    background-color: $search-twitter-blue;
+		    padding: 10px;
+		    border-radius: 3px;
+		}
+		padding-right: 85px;
+	}
+	.global-search-container {
+		width: 100%;
+		margin-top: 10px;
+		#global-search-input {
+			width: 100%;
+			padding: 7px 9px;
+			font-size: 13px;
+			border-radius: 0px;
+			line-height: 20px;
+			background: white;
+			&:focus {
+				box-shadow: $search-twitter-blue 0px 0px 0px 1px inset;
+			}
+		}
+		i {
+			display: none;
+		}	
+	}
+	.search-hints {
+		margin: 15px 0 0 0;
+		text-align: center;
+		.operator-hint, a {
+			color: $search-twitter-blue;
+		}
+	}
+	.trend-container {
+		margin: 60px 0 0 0;
+		h4 {
+			color: $search-grey;
+			padding: 0;
+			font-size: 18px;
+			margin: 0;
+		}
+		#horizontal-trend-list {
+			display: block;
+			margin: 10px 0 0 0;
+			padding: 0;
+			text-align: center;
+			li {
+				display: inline-block;
+				&:not(:first-child) {
+					margin: 7px 0  0 22px;
+				}
+			}
+		}
+	}
+	
+	
 }
