--- a/app/views/advancedsearch.html
+++ b/app/views/advancedsearch.html
@@ -31,7 +31,7 @@
 
 				<div class="form-section location-section">
 					<h3>Place</h3>
-					<h4 class="field-title">Near this place</h4>
+					<span class="field-title">Near this place</span>
 					<div>
 						<input type="text" ng-model="chosenLocation" class="chosen-location" ng-click="advanced.toggleShowLookUp()">
 						<ul class="suggestions" ng-show="advanced.hasSuggestions">
