--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -1,9 +1,10 @@
 <header ng-if="!root.sidebarEnabled" class="main-header">
     <div class="container topnav">
         <div class="universal-topnav-container">
-            <!-- Left -->
+            <!-- Left -->   
+            <a href="./"><img ng-show="!root.twitterSession" src="../images/loklak_icon_yellow_45x45_transparent.png" alt="Loklak logo"></a>
             <div class="hidden-xs universal-topnav-item list-of-views">
-                <ul>
+                <ul ng-show="root.twitterSession">
                     <li ng-repeat="navItem in root.topNavItems">
                         <a ng-class="(navItem.title == root.currentView) ? 'active-view-nav' : ''" ng-href="{{navItem.link}}"><span class="{{navItem.icon}}"></span><span class="nav-item-title">{{navItem.title}}</span></a>
                     </li>
@@ -11,7 +12,7 @@
             </div>
             <!-- Right -->
             <div class="hidden-xs universal-topnav-item topnav-user-actions">
-                <img src="../images/loklak_icon_yellow_45x45_transparent.png" alt="Loklak logo">
+                <img ng-show="root.twitterSession" src="../images/loklak_icon_yellow_45x45_transparent.png" alt="Loklak logo">
                 <div global-search-form ></div>  
                 <div twitter-session="root.twitterSession" class="signin-twitter" signin-twitter hello="root.hello" ></div>
                 <ul class="global-tweet-button-container" ng-if="root.twitterSession">
@@ -27,19 +28,24 @@
             <!-- Mobile nav -->
             <div class="visible-xs hidden-mobile-nav">
                 <div class="left-logo-and-brand">
-                    <img src="../images/loklak_icon_yellow_45x45_transparent.png" alt="Loklak logo">
+                    <img ng-show="root.twitterSession" src="../images/loklak_icon_yellow_45x45_transparent.png" alt="Loklak logo">
                 </div>
                 <div global-search-form ></div>  
-                <div class="hided">
+                <div ng-show="root.twitterSession" class="hided">
                     <a id="pull" href="#" ng-click="root.ToggleMobileNav()">
                         <button id="main-nav-button" class="lines-button x arrow arrow-left" type="button" role="button" aria-label="Toggle Navigation">
                           <span class="lines"></span>
                         </button>
                     </a>
                 </div>
+                <a id="sign-in-button" href="" ng-show="!root.twitterSession">
+                    <span class="link" ng-href="#signupModal" data-target="#signupModal">
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#signupModal"><i class="fa fa-twitter"></i>Sign in</button>
+                    </span>
+                </a>
             </div>
             <!-- Hidden items -->
-            <div class="hidden-items hidden-sm hidden-md hidden-lg hidden-init">
+            <div ng-show="root.twitterSession" class="hidden-items hidden-sm hidden-md hidden-lg hidden-init">
                 <div class="list-of-views">
                     <ul>
                         <li ng-repeat="navItem in root.topNavItems">
