--- a/app/views/search.html
+++ b/app/views/search.html
@@ -66,8 +66,21 @@
             </div>
 
             <!-- Right content: Other statistics -->
-            <div class="dashboard dashboard-right col-md-3">
-
+            <div ng-show="!search.showMap" class="dashboard dashboard-right col-md-3">
+                <!-- Right content: Other statistics -->
+                <div class="right-result-container col-md-8 visible-lg">
+                    <div class="home-user-trends">
+                        <h3 class="trend-title">Trends</h3>
+                        <ul id="home-trend-list">
+                            <li><a href="./search?q=%23loklak">#loklak</a></li>
+                            <li ng-repeat="(key, value) in root.trends">
+                                <!-- -->
+                                <a href="./search?q=%23{{key}}">#{{key}}</a>
+                                <!-- -->
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
 
         </div>
